@@ -96,3 +96,4 @@ download_directory_avcmp4 "ms0:/MP_ROOT/100ANV01"
 download_directory_videos "ms0:/psp/video"
 download_directory_images "ms0:/psp/photo"
 download_directory_other  "ms0:/downloads"
+psp_bb_to_fb_factor 1
